--- a/simple-todos.html
+++ b/simple-todos.html
@@ -11,10 +11,12 @@
         <input type="checkbox" checked="{{hideCompleted}}" />
         Hide Completed Tasks
       </label>
-      <!-- add a form below the h1 -->
+      {{> loginButtons}}
+      {{#if currentUser}}
        <form class="new-task">
          <input type="text" name="text" placeholder="Type to add new tasks" />
        </form>
+      {{/if}}
     </header>
 
     <ul>
@@ -31,6 +33,6 @@
 
     <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
 
-    <span class="text">{{text}}</span>
+    <span class="text"><strong>{{username}}</strong> - {{text}}</span>
   </li>
 </template>
